--- a/lib/Makefile
+++ b/lib/Makefile
@@ -4,7 +4,7 @@ libhelpers.so: 	helpers.o
 	gcc -shared helpers.o -o libhelpers.so
 
 helpers.o: helpers.c
-	gcc -c -fPIC helpers.c -o helpers.o
+	gcc -c -std=c99 -fPIC helpers.c -o helpers.o
 
 clean:
 	rm -f libhelpers.so
