--- a/lib/Makefile
+++ b/lib/Makefile
@@ -1,11 +1,19 @@
-all: libhelpers.so
+all: libhelpers.so libbufio.so
 
-libhelpers.so: 	helpers.o
-	gcc -shared helpers.o -o libhelpers.so
+libhelpers.so: helpers.o
+	gcc -o libhelpers.so -shared helpers.o
 
 helpers.o: helpers.c
-	gcc -c -std=c99 -fPIC helpers.c -o helpers.o
+	gcc -o helpers.o -c -std=c99 -fPIC -Wall helpers.c
+
+libbufio.so: bufio.o
+	gcc -o libbufio.so -shared bufio.o
+
+bufio.o: bufio.c
+	gcc -o bufio.o -c -fPIC -Wall bufio.c
 
 clean:
 	rm -f libhelpers.so
 	rm -f helpers.o
+	rm -f libbufio.so
+	rm -f bufio.o
